# graphini

./: .env.example  .gitignore  .sassrc  BUNDLE_ANALYSIS.md  EXCALIDRAW_SMOOTH_MOVEMENT_ANALYSIS.md  EXCALIDRAW_VS_GRAPHINIX_COMPARISON.md  README.md  README_CHATBOX.md  README_MERMAID_CANVAS.md  SELECTION_MOVEMENT_ANALYSIS.md  eslint.config.js  excalifile.json  netlify.toml  next.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  skills.md  svelte.config.js  tailwind.config.js  tsconfig.base.json  tsconfig.json  vite.config.js
api/: openapi.yaml
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
archived/: +page.svelte.bak  ConversationsSidebar.svelte  SecondarySidebar.svelte  aws_icon_comparison.md  download_log.txt  icon_search_enhancement.md  icons.csv  icons.html  icons.html.backup  icons_enhanced.csv  service-worker.js
archived/backends/cpp-backend/: .env  .gitignore  CMakeLists.txt  README.md
archived/backends/cpp-backend/include/: ai_client.h  db_client.h  rate_limiter.h  utils.h
archived/backends/cpp-backend/src/: ai_client.cpp  db_client.cpp  main.cpp  rate_limiter.cpp  utils.cpp
components/: async-sidebar.tsx  chatbox.tsx  custom-drawnix.tsx  memoized-markdown.tsx  mermaid-artifact.tsx  use-mermaid-to-canvas.tsx
database/: README.md  add-admin-settings.sql  add-app-settings.sql  add-files-persistence.sql  add-files-support.sql  add-gemini-provider.sql  add-user-memories.sql  models-schema.sql  models.db  performance-indexes.sql  schema.sql  v2-schema.sql
docs/: DOCUMENTATION.md  SECURITY.md
lib/: performance.ts
(+554 files in other folders)
